[profile.release]
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[workspace]
members = [
  "glonax-gamepad",
  "glonax-j1939",
  "glonax-net",
  "glonax-runtime",
  "glonax-serial",
  "glonax-input"
]
