[profile.release]
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[workspace]
resolver = "2"
members = [
  "glonax-j1939",
  "glonax-runtime",
  "glonax-serial",
  "glonax-proxy",
  "glonax-input",
  "glonax-agent",
  "glonax-csim",
  "glonax-utils"
]
