[profile.release]
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[workspace]
resolver = "2"
members = [
  "glonax-input",
  "glonax-runtime",
  "glonax-serial",
  "glonax-server",
  "glonax-utils",
  "glonax-control"
]
