[package]
name = "glonax-control"
version = "1.0.0"
authors = ["Laixer Equipment B.V. <info@laixer.com>"]
edition = "2021"
repository = "https://github.com/Laixer/Glonax"

[dependencies]
glonax = { version = "3", path = "../glonax-runtime" }

log = "0.4"
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
simplelog = "0.12"
serde = "1.0"
serde_derive = "1.0"
ansi_term = "0.12"
hex = "0.4"
chrono = "0.4"

[[bin]]
name = "glonaxctl"
path = "src/main.rs"
