[package]
name = "glonax-dump"
version = "0.1.0"
edition = "2021"

[dependencies]
glonax = { version = "3", path = "../glonax-runtime" }

rand = "0.8"

nalgebra = "0.32.3"
parry3d = "0.13.5"
rapier3d = "0.17.2"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

log = "0.4"
anyhow = "1.0"
tokio = { version = "1.29", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
simplelog = "0.12"
