[package]
name = "glonax-dump"
version = "0.1.0"
edition = "2021"

[dependencies]
glonax = { version = "3", path = "../glonax-runtime" }

rand = "0.8"

nalgebra = "0.33"
parry3d = "0.13.5"
rapier3d = "0.21"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

log = "0.4"
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
simplelog = "0.12"
