[package]
name = "glonax-input"
version = "1.0.0"
authors = ["Laixer Equipment B.V. <info@laixer.com>"]
edition = "2021"
repository = "https://github.com/Laixer/Glonax"

[dependencies]
glonax = { version = "3", path = "../glonax-runtime" }
glonax-gamepad = { version = "1", path = "../glonax-gamepad" }

log = "0.4"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
simplelog = { version = "0.12", features = ["paris"] }
