[package]
name = "glonax-j1939"
version = "1.0.0"
authors = ["Laixer Equipment B.V. <info@laixer.com>"]
edition = "2021"
repository = "https://github.com/Laixer/Glonax"
description = """
J1939 network protocol.
"""
categories = ["protocol", "decoder", "encoder", "network"]
keywords = ["protocol", "hardware", "glonax"]

[dependencies]
log = "0.4"
tokio = { version = "1.18", features = ["full"] }
libc = "0.2"
j1939 = { git = "https://github.com/Laixer/J1939" }
