[package]
name = "glonax"
version = "3.2.0"
authors = ["Laixer Equipment B.V. <info@laixer.com>"]
edition = "2021"
repository = "https://github.com/Laixer/Glonax"
description = """
Heavy equipment controller library
"""
categories = ["hardware", "machine", "controller"]
keywords = ["hardware", "machine", "controller"]

[dependencies]
glonax-j1939 = { version = "1.0", path = "../glonax-j1939" }

chrono = "0.4"
bytes = "1.5"
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
tokio = { version = "1.33", features = ["full"] }
sysinfo = "0.29"
socket2 = "0.5"
