[package]
name = "glonax"
version = "3.3.0"
authors = ["Laixer Equipment B.V. <info@laixer.com>"]
edition = "2021"
repository = "https://github.com/Laixer/Glonax"
description = """
Heavy equipment controller library
"""
categories = ["hardware", "machine", "controller"]
keywords = ["hardware", "machine", "controller"]

[dependencies]
glonax-j1939 = { version = "1.0", path = "../glonax-j1939" }

rand = "0.8"
chrono = "0.4"
bytes = "1.5"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
tokio = { version = "1.35", features = ["full"] }
static_assertions = "1.1"
sysinfo = "0.30"
socket2 = "0.5"
nalgebra = "0.32"
rapier3d = "0.17.2"
