[package]
name = "glonax"
version = "3.5.13"
authors = ["Laixer Equipment B.V. <info@laixer.com>"]
edition = "2021"
repository = "https://github.com/Laixer/Glonax"
description = """
Heavy equipment controller library
"""
categories = ["hardware", "machine", "controller", "heavy", "equipment"]
keywords = ["hardware", "machine", "controller", "glonax"]

[dependencies]
rand = "0.8"
chrono = "0.4"
bytes = "1.6"
uuid = { version = "1.10", features = ["serde", "v4"] }
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
tokio = { version = "1.38", features = ["full"] }
libc = "0.2"
j1939 = "0.1"
sysinfo = "0.30"
socket2 = "0.5"
nalgebra = "0.33"
rapier3d = "0.21"
