[package]
name = "glonax-server"
version = "1.0.0"
authors = ["Laixer Equipment B.V. <info@laixer.com>"]
edition = "2021"
repository = "https://github.com/Laixer/Glonax"

[dependencies]
glonax = { version = "3", path = "../glonax-runtime" }
glonax-serial = { version = "1", path = "../glonax-serial" }

reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"

log = "0.4"
anyhow = "1.0"
tokio = { version = "1.33", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
simplelog = "0.12"

[[bin]]
name = "glonaxd"
path = "src/main.rs"
