[package]
name = "glonax-server"
version = "1.0.0"
authors = ["Laixer Equipment B.V. <info@laixer.com>"]
edition = "2021"
repository = "https://github.com/Laixer/Glonax"

[dependencies]
glonax = { version = "3", path = "../glonax-runtime" }

log = "0.4"
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
simplelog = { version = "0.12", features = ["paris"] }
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
nalgebra = "0.33"

[[bin]]
name = "glonaxd"
path = "src/main.rs"
