[package]
name = "glonax-utils"
version = "1.0.0"
authors = ["Laixer Equipment B.V. <info@laixer.com>"]
edition = "2021"
repository = "https://github.com/Laixer/Glonax"

[dependencies]
glonax = { version = "3", path = "../glonax-runtime" }

log = "0.4"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
simplelog = "0.12"
ansi_term = "0.12"
hex = "0.4"
chrono = "0.4"

[[bin]]
name = "glonax-netctl"
path = "src/netctl.rs"

[[bin]]
name = "glonax-cli"
path = "src/cli.rs"
